FreedomSanboxAntDeploy/src/objects/Mutual_Fund_ET__c.object
<CustomObject>
    <description>Created for ET</description>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>Account No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Address__c</fullName>
        <label>Branch Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Address__c</fullName>
        <label>Communication Address</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_birth_Guardian__c</fullName>
        <label>Date of birth - Guardian(DD/MM/YYYY)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_birth_Second_holder__c</fullName>
        <label>Date of birth (Second holder)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_birth_third_holder__c</fullName>
        <label>Date of birth (third holder)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <label>Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guardian_Name__c</fullName>
        <label>Guardian Name (In case nominee is minor)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Name_as_in_PAN_card__c</fullName>
        <description>(If first holder is minor)</description>
        <label>Guardian Name as in PAN card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investor_Name_In_Bank_Record__c</fullName>
        <label>Investor Name (As in bank record)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investor_Name__c</fullName>
        <label>Investor (Name as in PAN card)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MICR_Code__c</fullName>
        <label>MICR Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_of_holding__c</fullName>
        <label>Mode of holding</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Second_holder__c</fullName>
        <label>Name of Second holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_third_holder__c</fullName>
        <label>Name of third holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominee_s_DOB__c</fullName>
        <label>Nominee&apos;s DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nominee_s_Name__c</fullName>
        <label>Nominee&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <picklist>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Reinvestment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Payout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PAN_No_Guardian__c</fullName>
        <label>PAN No.(Guardian)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_No_Second_holder__c</fullName>
        <label>PAN No. (Second holder)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_No__c</fullName>
        <label>PAN No</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PAN_No_third_holder__c</fullName>
        <label>PAN No. (third holder)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIP_Installments__c</fullName>
        <label>SIP Installments</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STP_Amount_per_transfer__c</fullName>
        <label>STP Amount per transfer</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STP_Installments__c</fullName>
        <label>STP Installments</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheme_Name__c</fullName>
        <label>Scheme Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redemption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Mutual Fund</label>
    <nameField>
        <label>Mutual Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mutual Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>